static/styles.css
/* Styles for the body */
body {
    margin: 0;
    padding: 25px;
    overflow-y: auto;
}

.inline-p {
    display: inline
}

/* Index HTML */
/* Styles for the index page, including styling for the scrollable list of books */


.scrollable-list {
    align-items: center;
    width: 98%;
    height: 60vh;
    overflow-y: auto;
    border: 1px solid black;
}

.scrollable-list li { /* For each of the scrollable list */
    padding: 10px;
    border-bottom: 1px solid black;
}

/* Manage HTML */
/* Styles for the manage page */

#manageBooksList {
    width:30%;
    height: 40vh;
    border: 2px solid black;
    margin-bottom: 20px;
}

#bookList {
    overflow-y: auto;
    list-style-type: none;
}

/* Stats HTML */
/* Styles for the stats page */
#stats_page {
    text-align: center;
}

#goal_chart {
    border: 2px solid black;
    width: 35vh;
    height: 35vh;
}

#statusPieChart {
    border: 2px solid black;
    width: 35vh;
    height: 35vh;
}

